# sprak

./: README.md  pyproject.toml  requirements.txt  test.py
aseprite_reader/: aseprite_file.py
sprak/: __init__.py
sprak/models/: atlas.py  frame.py  rect.py
sprak/utilities/: ffmpeg_utils.py
src/sprak/: sprite_packer.py
src/sprak/models/: atlas.py  frame.py  rect.py
src/sprak/utilities/: ffmpeg_utils.py
