[project]
name = "sprak"
version = "1.3.0"
description = "Pack sprites into a texture atlas"
readme = "README.md"
authors = [
    { name = "akennedy", email = "andrewjacobkennedy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aseprite-reader>=1.1.0",
    "pillow>=12.1.1",
]

[project.urls]
Homepage = "https://github.com/kennedy0/sprak"

[tool.ruff]
line-length = 120

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
